# GraphDO

./: .gitignore  README.md  README_CN.md  data_loader.py  description_generator.py  evaluator.py  examples.py  generate.py  graph_generator.py  graph_ordering.py  graphdo.py  info.py  main.py  model_loader.py  pyproject.toml  text_encoder.py
graph/: connectivity.jsonl  cycle.jsonl  hamilton.jsonl  shortest_path.jsonl  topology.jsonl
