[project]
name = "graphdo"
version = "0.1.0"
description = "Graph Description with Order — studying how edge ordering affects LLM graph reasoning"
requires-python = ">=3.10"

dependencies = [
    "networkx>=3.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "tqdm>=4.64",
]

[project.optional-dependencies]
# Local LLM inference (large, install separately if needed)
local = [
    "torch>=2.0",
    "transformers>=4.40",
    "accelerate>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
]
